--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "^4.0.0",
     "client-sessions": "^0.8.0",
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
@@ -11,7 +12,8 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "reactstrap": "^5.0.0-beta"
   },
   "scripts": {
     "start": "react-scripts start",
