--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
     "client-sessions": "^0.8.0",
+    "firebase": "^4.9.1",
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
