--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://probstin.github.io/m8d"
+  "homepage": "https://ncope1.github.io/m8d"
 }
